# SILO

./: API.md  ARCHITECTURE.md  BUILD_RELEASE.md  DEV-SETUP.md  LICENSE.md  README.md  SECURITY.md  args.txt  package.json  pnpm-lock.yaml  release-notes.md  startup_args.txt  vite.config.js
playwright-report/: index.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/schema/: 001_initial.sql
src-tauri/src/: api.rs  blocked.html  lib.rs  models.rs  monitor.rs  storage.rs
src/lib/: siloApi.ts
src/lib/components/: BottomNav.svelte  EmptyState.svelte  IconBadge.svelte  MetricCard.svelte  OtpInput.svelte  ToggleSwitch.svelte  TrendChart.svelte
src/lib/components/views/: DashboardView.svelte  NetworkAppsView.svelte  NetworkSitesView.svelte  NetworkView.svelte  RulesView.svelte  SettingsView.svelte  StatsView.svelte
src/lib/utils/: cleanDomain.test.ts  cleanDomain.ts
src/routes/: +page.svelte
src/routes/notification/: +page.svelte
src/routes/overlay/: +page.svelte
tests/: example.spec.ts
~/.tauri/: silo.key  silo.key.pub
